Simplify to minimal course book

--- a/Bibliography/Bibliography.bib
+++ b/Bibliography/Bibliography.bib
@@ -14,7 +14,7 @@
     url      = {https://ieeexplore.ieee.org/document/1057074},
 }
 
-@Misc{IPLeiriaThesis,
+@Misc{CourseBookTemplate,
     author   = {{José Areia}},
     title    = {Polytechnic University of Leiria: LaTeX Thesis Template},
     year     = {2023},
