--- a/Configurations/10-Macros.sty
+++ b/Configurations/10-Macros.sty
@@ -1,152 +1,25 @@
-%%% Document Macros and Extras %%%
+%%% Basic macros used in the chapters
 
-% Blank page with a warning indicating it is intentionally left blank.
-\newcommand\blankpage{
-    \clearpage
-    \thispagestyle{empty}%
-    \vspace*{\fill}
-    \begin{center}
-        \ifthenelse{\equal{\LanguageOption}{portuguese}}{%
-            \textcolor{gray!50}{\textit{Página intencionalmente deixada em branco.}}
-        }{%
-            \textcolor{gray!50}{\textit{This page intentionally left blank.}}
-        }
-    \end{center}
-    \vspace*{\fill}
-    \clearpage
-} 
-
-% Command that will combine a plain page style and a blank one.
-\newcommand{\plainblankpage}{\thispagestyle{plain}\blankpage}
-
-% Indicates that a writing guide will be displayed.
-\newcommand{\guideinfo}[1]{%
-    \ifthenelse{\equal{\LanguageOption}{portuguese}}{%
-        \noindent\textcolor{note}{\faInfoCircle\ \textbf{Orientação Para a Escrita}}%
-    }{
-        \noindent\textcolor{note}{\faInfoCircle\ \textbf{Writing Guidance}}%
-    }
-    \\[.55em]%
-    \noindent #1%
-}
-
-\newcommand{\exampleinfo}[1]{%
-    \ifthenelse{\equal{\LanguageOption}{portuguese}}{%
-        \noindent\textcolor{black}{\faInfoCircle\ \textbf{Exemplo de Utilização}}%
-    }{
-        \noindent\textcolor{black}{\faInfoCircle\ \textbf{Example of Use}}%
-    }
-    \\[.55em]%
-    \noindent #1%
-}
-
-% Abstract keywords.
-\NewDocumentCommand{\keywordsen}{m}{\vspace{.4cm}\noindent\textbf{Keywords:} #1}
-\NewDocumentCommand{\keywordspt}{m}{\vspace{.4cm}\noindent\textbf{Palavras-Chave:} #1}
-
-% Landscape mode - the proper way!
-\def\ifGm@preamble#1{\@firstofone}
-\appto\restoregeometry{%
-    \pdfpagewidth=\paperwidth
-    \pdfpageheight=\paperheight}
-\apptocmd\newgeometry{%
-    \pdfpagewidth=\paperwidth
-    \pdfpageheight=\paperheight}{}{}
-\newenvironment{landscapemode}[2]{%
-    \newgeometry{paperwidth=#1,paperheight=#2,hmargin=3cm,vmargin=5cm,top=3cm,landscape}
-    \fancyheadoffset{0pt}
-    %\titlespacing*{\chapter}{0pt}{0pt}{40pt}
-}{%
-    \restoregeometry
-    \fancyheadoffset{0pt}
-}
-
-% Custom Markdown quote block implementation in LaTeX.
-\newtcolorbox[auto counter,number within=section]{block}[1][]{
+\newtcolorbox[auto counter,number within=section]{block}[1][]{%
     enhanced jigsaw,
     coltitle=#1,
-    colback=#1!08!white,
-    colframe=#1!08!white,
-    fonttitle=\latofont\bfseries,
+    colback=#1!8!white,
+    colframe=#1!8!white,
+    fonttitle=\bfseries,
     sharp corners=west,
     detach title,
     borderline west={.85mm}{0pt}{#1},
     pad at break=1mm,
     top=4mm,
     bottom=4mm,
-    title={\ifstrequal{#1}{todo}{To-Do}{\capitalisewords{#1}}},
+    title={\IfStrEq{#1}{todo}{To-Do}{\capitalisewords{#1}}},
     code={\ifdefempty{\tcbtitletext}{}{\tcbset{before upper={\tcbtitle\par\medskip}}}},
 }
 
-% Capitalise the first letter in '\autoref' for both English and Portuguese.
+% Autoref names
 \addto\extrasenglish{\def\figureautorefname{Figure}}
 \addto\extrasenglish{\def\chapterautorefname{Chapter}}
 \addto\extrasenglish{\def\sectionautorefname{Section}}
 \addto\extrasenglish{\def\subsectionautorefname{Section}}
 \addto\extrasenglish{\def\subsubsectionautorefname{Section}}
 \addto\extrasenglish{\def\tableautorefname{Table}}
-\addto\extrasenglish{\def\partautorefname{Part}}
-\addto\extrasenglish{\def\appendixautorefname{Appendix}}
-\addto\extrasportuguese{\def\sectionautorefname{Secção}}
-\addto\extrasportuguese{\def\subsectionautorefname{Secção}}
-\addto\extrasportuguese{\def\subsubsectionautorefname{Secção}}
-
-% Command to overwrite the color of a given command.
-\newcommand{\overwritecolor}[2]{%
-    \textcolor{#1}{%
-        \renewcommand\color[2][]{}%
-    #2}%
-}
-
-% Wrapping bot glossary and acronyms commands.
-\newcommand{\printnormalglossary}{\printglossary}
-\newcommand{\printacronymglossary}{\printglossary[type=\acronymtype]}
-
-% Logic to add or omit a blank page depending on the '\MediaOption' value.
-\newcommand{\MediaOptionLogic}{%
-    \ifthenelse{\equal{\MediaOption}{paper}}{\plainblankpage}{\thispagestyle{plain}}%
-}
-
-\newcommand{\MediaOptionLogicAcr}{%
-    \ifthenelse{\equal{\MediaOption}{paper}}{\plainblankpage}{\clearpage\thispagestyle{plain}}%
-}
-
-\newcommand{\MediaOptionLogicBlank}{%
-    \ifthenelse{\equal{\MediaOption}{paper}}{\blankpage}{}%
-}
-
-\newcommand{\MediaOptionLogicAnnexes}{%
-    \ifthenelse{\equal{\MediaOption}{paper}}{\blankpage}{\clearpage}%
-}
-
-% Update various elements based on the '\MediaOption' value.
-\apptocmd{\tableofcontents}{\MediaOptionLogic}{}{\fail}
-\apptocmd{\listoffigures}{\MediaOptionLogic}{}{\fail}
-\apptocmd{\listoftables}{\MediaOptionLogic}{}{\fail}
-\apptocmd{\printnormalglossary}{\MediaOptionLogic}{}{\fail}
-\apptocmd{\printacronymglossary}{\MediaOptionLogicAcr}{}{\fail}
-\pretocmd{\printbibliography}{\MediaOptionLogic}{}{\fail}
-
-\NewDocumentCommand{\prompt}{o m}{%
-    \ifthenelse{\equal{\LanguageOption}{portuguese}}{%
-        \IfNoValueTF{#1}
-        {\noindent\textbf{Instrução:} #2}
-        {\noindent\textbf{Instrução #1:} #2}
-    }{
-        \IfNoValueTF{#1}
-        {\noindent\textbf{Prompt:} #2}
-        {\noindent\textbf{Prompt #1:} #2}
-    }
-}
-
-\NewDocumentCommand{\aioutput}{o m}{%
-    \ifthenelse{\equal{\LanguageOption}{portuguese}}{%
-        \IfNoValueTF{#1}
-        {\noindent\textbf{Resposta:} #2}
-        {\noindent\textbf{Resposta #1:} #2}
-    }{
-        \IfNoValueTF{#1}
-        {\noindent\textbf{Output:} #2}
-        {\noindent\textbf{Output #1:} #2}
-    }
-}
