Fix XeLaTeX build

--- a/Configurations/01-Colors.sty
+++ b/Configurations/01-Colors.sty
@@ -1,7 +1,7 @@
 %%% Document Colors %%%
 
-% Main document color; used mainly in citation links.
-\colorlet{maincolor}{\ColorOption}
+% Main document color; used mainly in citation links. Default to RoyalBlue.
+\definecolor{maincolor}{HTML}{4169E1}
 
 % Color used in the numeration of the chapter style 'classic'.
 \colorlet{chapterdarkred}{red!30!black}
