--- a/Configurations/02-Margins.sty
+++ b/Configurations/02-Margins.sty
@@ -1,28 +1,15 @@
 %%% Margins %%%
 \usepackage{geometry}
-\ifthenelse{\equal{\BookPrintOption}{false}}{%
-    \geometry{
-        paper=a4paper,
-        top=2.54cm,
-        bottom=2.54cm,
-        left=3.15cm,
-        right=3.15cm,
-        footskip=1.6cm,
-        headsep=0.75cm,
-        % showframe % Uncomment to display margin frames for debugging.
-    }
-}{%
-    \geometry{
-        paper=a4paper,
-        top=2.54cm,
-        bottom=2.54cm,
-        inner=2.54cm,
-        outer=3.81cm,
-        footskip=1.6cm,
-        headsep=0.75cm,
-        bindingoffset=0.5cm,
-        % showframe % Uncomment to display margin frames for debugging.
-    }
+% Single geometry setup. Adjust margins as needed.
+\geometry{
+    paper=a4paper,
+    top=2.54cm,
+    bottom=2.54cm,
+    left=3.15cm,
+    right=3.15cm,
+    footskip=1.6cm,
+    headsep=0.75cm,
+    % showframe % Uncomment to display margin frames for debugging.
 }
 
 \addtolength{\textheight}{-20pt} % Decrease text height slightly.
